<resources>
    <string name="app_name">PhoneBook</string>

    <string name="contact_list_empty">LIST IS EMPTY</string>
    <string name="contact_name_input">Contact Name: </string>
    <string name="contact_phone_input">Contact Phone: </string>

    <string name="contact_first_name">First name</string>
    <string name="contact_last_name">Last name</string>
    <string name="contact_phone_number">Phone number</string>
    <string name="contact_email">Email</string>
    <string name="contact_notes">Notes</string>
    <string name="btn_add_field">Add another field</string>
    <string name="btn_add_phone">Add phone number</string>
    <string name="btn_add_email">Add email</string>
    <string name="toolbar_title_add_contact">Add new contact</string>
    <string name="toolbar_title_edit_contact">Edit contact</string>

    <!-- Toasts -->
    <string name="toast_contact_added_successfully">Contact Added Successfully! </string>
    <string name="toast_contact_edited_successfully">Contact Edited Successfully! </string>
    <string name="toast_contact_added_cancelled">Contact Adding Cancelled! </string>
    <string name="toast_contact_edited_cancelled">Contact Editing Cancelled! </string>

    <!-- SnackBars -->
    <string name="snack_bar_contact_deleted">Contact deleted</string>
    <string name="snackBar_contact_added">Contact deleted</string>


    <string name="contact_show_list">Show contacts</string>
    <string name="contact_name_in_list">%1$s %2$s</string>

    <!--Validate alarms-->
    <string name="name_is_blank">Please insert a name for contact! </string>
    <string name="number_is_blank">Please insert at least one number! </string>

    <!--3 dot menus-->
    <string name="menu_share_contact">Share contact</string>
    <string name="menu_edit_contact">Edit contact</string>
    <string name="menu_delete_contact">Delete contact</string>

    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="ensure_delete">Are you sure to delete this contact?</string>
</resources>
