<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/margin_large">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ensure_delete"
        android:textColor="@android:color/black"
        android:textSize="@dimen/font_normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/margin_small">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_weight="1"
            android:background="@drawable/shape_rectangle_button"
            style="?android:attr/borderlessButtonStyle"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/font_normal" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_weight="1"
            android:background="@drawable/shape_rectangle_button"
            style="?android:attr/borderlessButtonStyle"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/delete"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/font_normal" />
    </LinearLayout>


</LinearLayout>