<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_large">


    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="@dimen/icon_edit_part"
        android:layout_height="@dimen/icon_edit_part"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_normal"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/txt_note"
        app:srcCompat="@drawable/ic_note_black_24dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="@dimen/icon_edit_part"
        android:layout_height="@dimen/icon_edit_part"
        android:layout_marginEnd="@dimen/margin_normal"
        app:layout_constraintBottom_toBottomOf="@+id/txt_email"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/txt_email"
        app:srcCompat="@drawable/ic_mail_outline_black_24dp" />

    <EditText
        android:id="@+id/txt_note"
        android:layout_width="0dp"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_normal"
        android:hint="@string/contact_notes"
        android:inputType="text"
        android:maxLength="256"
        android:maxLines="4"
        android:textAlignment="textStart"
        android:textSize="@dimen/font_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/txt_email" />

    <EditText
        android:id="@+id/txt_email"
        android:layout_width="0dp"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_normal"
        android:hint="@string/contact_email"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/font_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/txt_phone_number" />

    <EditText
        android:id="@+id/txt_phone_number"
        android:layout_width="0dp"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_normal"
        android:hint="@string/contact_phone_number"
        android:inputType="phone"
        android:textSize="@dimen/font_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/txt_last_name" />

    <EditText
        android:id="@+id/txt_last_name"
        android:layout_width="0dp"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_normal"
        android:hint="@string/contact_last_name"
        android:inputType="textPersonName"
        android:textSize="@dimen/font_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/txt_first_name" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <ImageView
        android:id="@+id/image_contact"
        android:layout_width="@dimen/contact_image_edit"
        android:layout_height="@dimen/contact_image_edit"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_normal"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_android" />

    <EditText
        android:id="@+id/txt_first_name"
        android:layout_width="0dp"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_small"
        android:hint="@string/contact_first_name"
        android:inputType="textPersonName"
        android:textSize="@dimen/font_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/icon_edit_part"
        android:layout_height="@dimen/icon_edit_part"
        android:layout_marginEnd="@dimen/margin_normal"
        app:layout_constraintBottom_toBottomOf="@+id/txt_phone_number"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/txt_phone_number"
        app:srcCompat="@drawable/ic_phone_black_24dp" />

    <Button
        android:id="@+id/btn_add_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:text="@string/btn_add_field"
        android:textSize="@dimen/font_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_note" />

</android.support.constraint.ConstraintLayout>